# keras-typed

./: .gitignore  README.md  pyproject.toml
src/tkeras/: __about__.py  __init__.py
src/tkeras/_api/backend/: config.py
src/tkeras/_api/backend/common/: backend_utils.py  dtypes.py  global_state.py
src/tkeras/_api/utils/: naming.py
src/tkeras/_core/backend/: config.py
src/tkeras/_core/backend/common/: backend_utils.py  dtypes.py  global_state.py
src/tkeras/_core/utils/: module_utils.py
